--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 
 <body>
-    <h1>속성값의 따옴표</h1>
-    <p>속성값에 따옴표가 필요한지 테스트</p>
+    <h1>코딩을 열심히 해보자!!</h1>
+    <h2>제목 h2</h2>
+    <h3>제목 h3</h3>
+    <p>단락 1</p>
+    <p>단락 2</p>
 </body>
 
 </html>
