--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 </head>
 
 <body>
-    <h1>제목1크기</h1>
-    <h2>제목2</h2>
-    <h3>제목2</h3>
-    <h4>제목2</h4>
-    <h6>제목2</h6>
-    <h7>제목2</h7>
+    <h1> 종료태크 없이 테스트
 </body>
 
 </html>
