단락 테스트

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>HTML 시작</title>
-</head>
+    <title> HTML Paragraph</title>
 
 <body>
-    <h1> 종료태크 없이 테스트
+    <h1>제목1</h1>
+    <h2>제목2</h2>
+    <p>단락1</p>
 </body>
-
+</head>
 </html>
