--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
     <h1>제목1</h1>
     <h2>제목2</h2>
-    <p>
-    단락1<br>
-    단락2<br>
-    <br>
-    출력?
-    </p>
+    <pre>
+줄을 나누고 싶어서 
+preformatted text 를 사용해 보았다
+
+과연 될까?
+    </pre>
 </body>
 </html>
