--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@ preformatted text 를 사용해 보았다
 
 과연 될까?
     </pre>
+    <p>horizontal rule1</p>
+    <hr>
+    <p>horizontal rule2</p>
+    <hr>
 </body>
 </html>
