--- a/index.html
+++ b/index.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title> HTML Paragraph</title>
-</head>
-<body>
-    <h1>제목1</h1>
-    <h2>제목2</h2>
-    <pre>
-줄을 나누고 싶어서 
-preformatted text 를 사용해 보았다
+<html lang="ko">
 
-과연 될까?
-    </pre>
-    
-    <p>horizontal rule1</p>
-    <hr>
-    <p>horizontal rule2</p>
-    <hr>
+<head>
+	<meta charset="UTF-8">
+	<title>HTML Formatting</title>
+</head>
+
+<body>
+    <h1>b 와 strong의 차이점?</h1>
+    <p><b> "이부분이 b"</b>입니다.</p>
+    <p><strong>"이부분이 strong"</strong>입니다</p>
 </body>
 </html>
