--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>b 와 strong의 차이점?</h1>
     <p><b> "이부분이 b"</b>입니다.</p>
     <p><strong>"이부분이 strong"</strong>입니다</p>
+    <p><i>italic"i"</i></p>
+    <p><em>italic "em"</em></p>
 </body>
 </html>
